# hgen

./: .gitignore  LICENCE  README.md  pyproject.toml
examples/: benchmark_baseline.py  benchmark_comparison.py  quick_test.py
hypergen/: __init__.py  cli.py
hypergen/core/: dataset.py  lora.py  model.py
hypergen/optimizations/: compiler.py  memory.py
hypergen/server/: api.py
